--- a/stat_py_wb01.ipynb
+++ b/stat_py_wb01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO2j3zT34+a/MnTcGEL/KoT",
+      "authorship_tag": "ABX9TyPTHHk7UE8a5WIpvtMATZ5F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "\n",
         "The first thing you need if you are going to undergo any statistical analysis you will need to be able to interact with your data. In Python there are many ways to get data such as:  \n",
         "\n",
-        "* *italicised text* manual entry\n",
+        "* manual entry\n",
         "* generating it in python,\n",
         "* importing existing data set\n",
         "* scrapping it directly from the web.\n",
