--- a/stat_py_wb01.ipynb
+++ b/stat_py_wb01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTHHk7UE8a5WIpvtMATZ5F",
+      "authorship_tag": "ABX9TyOuK7M+osoL1th07d7vlyVv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,6 +63,58 @@
       "metadata": {
         "id": "oaZG3eIF3vbq"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data types"
+      ],
+      "metadata": {
+        "id": "oDB_OoqOIRgz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Nominal: Categories with no inherent order\n",
+        "nominal_data = ['Red', 'Blue', 'Green', 'Red', 'Yellow', 'Blue']\n",
+        "\n",
+        "# Ordinal: Categories with natural order\n",
+        "ordinal_data = ['Poor', 'Fair', 'Good', 'Excellent', 'Good', 'Fair']\n",
+        "\n",
+        "# Interval: Numeric with equal intervals, no true zero\n",
+        "interval_data = [20, 25, 30, 22, 28]  # Temperature in Celsius\n",
+        "\n",
+        "# Ratio: Numeric with equal intervals and true zero\n",
+        "ratio_data = [0, 5, 10, 15, 20]  # Height, weight, income\n",
+        "\n",
+        "print(\"Data Types Examples:\")\n",
+        "print(f\"Nominal: {nominal_data}\")\n",
+        "print(f\"Ordinal: {ordinal_data}\")\n",
+        "print(f\"Interval: {interval_data}\")\n",
+        "print(f\"Ratio: {ratio_data}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_3UqabM-IOTM",
+        "outputId": "540a4d29-0d06-497f-ee65-74dec6d4e44c"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Data Types Examples:\n",
+            "Nominal: ['Red', 'Blue', 'Green', 'Red', 'Yellow', 'Blue']\n",
+            "Ordinal: ['Poor', 'Fair', 'Good', 'Excellent', 'Good', 'Fair']\n",
+            "Interval: [20, 25, 30, 22, 28]\n",
+            "Ratio: [0, 5, 10, 15, 20]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
