--- a/stat_py_wb03.ipynb
+++ b/stat_py_wb03.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGOT9LmeflzOyj8jCdbjeN",
+      "authorship_tag": "ABX9TyPRVNmVGNc9g1x8s5OOAI8j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,12 @@
         "from sklearn.metrics import mean_squared_error, r2_score\n",
         "from sklearn.model_selection import train_test_split\n",
         "import scipy.stats as stats\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import random\n",
+        "\n",
+        "np.random.seed(42)\n",
+        "random.seed(42)\n",
+        "seaborn_colors = sns.color_palette(\"colorblind\")"
       ],
       "metadata": {
         "id": "f_VumC4A2jvF"
@@ -70,11 +75,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import random\n",
-        "\n",
-        "np.random.seed(42)\n",
-        "random.seed(42)\n",
-        "\n",
         "sample_sizes=  [10,100,1000,100000]\n",
         "sample_space= ['Heads','Tails']\n",
         "\n",
@@ -314,7 +314,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# CLt example sampled from chisq distribution\n",
+        "# CLT example sampled from chisq distribution\n",
         "\n",
         "sample_sizes=[5,10,50,1000]\n",
         "n_samples=5000\n",
