--- a/Probability.ipynb
+++ b/Probability.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKmciqNH25dyk5LDbrjJ22",
+      "authorship_tag": "ABX9TyPqBl4HI5L0pbTem2quT3+k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,172 +27,216 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "# Probability Assessment Questions\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import random\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
         "\n",
-        "## Question 1\n",
-        "A bag contains 15 marbles: 8 red and 7 blue. Two marbles are drawn without replacement.\n",
-        "\n",
-        "**a)** What is the probability that the second marble is red, given that the first marble was blue?\n",
-        "\n",
-        "**b)** What is the probability that both marbles are the same color?\n",
-        "\n",
-        "**c)** Are the events \"first marble is red\" and \"second marble is red\" independent? Justify your answer.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## Question 2\n",
-        "In a class of 30 students:\n",
-        "- 18 students play basketball (B)\n",
-        "- 12 students play soccer (S)\n",
-        "- 6 students play both sports\n",
-        "\n",
-        "**a)** Draw a Venn diagram to represent this information.\n",
-        "\n",
-        "**b)** How many students play exactly one sport?\n",
-        "\n",
-        "**c)** What is the probability that a randomly selected student plays basketball OR soccer?\n",
-        "\n",
-        "**d)** What is the probability that a randomly selected student plays neither sport?\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## Question 3\n",
-        "A manufacturing process has two stages. In Stage 1, there's a 0.15 probability of a defect. In Stage 2, if there was no defect in Stage 1, there's a 0.08 probability of a defect. However, if there was a defect in Stage 1, the probability of a defect in Stage 2 increases to 0.25.\n",
-        "\n",
-        "**a)** Draw a complete tree diagram for this process.\n",
-        "\n",
-        "**b)** What is the probability that a product has no defects after both stages?\n",
-        "\n",
-        "**c)** What is the probability that a product has exactly one defect?\n",
-        "\n",
-        "**d)** Given that a product has at least one defect, what is the probability that the defect occurred in Stage 1 only?\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## Question 4\n",
-        "A survey of 200 people examined the relationship between age group and preferred social media platform:\n",
-        "\n",
-        "|           | Instagram | TikTok | Twitter | Total |\n",
-        "|-----------|-----------|--------|---------|-------|\n",
-        "| 18-30     | 45        | 35     | 20      | 100   |\n",
-        "| 31-50     | 25        | 15     | 35      | 75    |\n",
-        "| 51+       | 10        | 5      | 10      | 25    |\n",
-        "| **Total** | 80        | 55     | 65      | 200   |\n",
-        "\n",
-        "**a)** What is the probability that a randomly selected person prefers Instagram?\n",
-        "\n",
-        "**b)** What is the probability that a person is 18-30 years old, given they prefer TikTok?\n",
-        "\n",
-        "**c)** Are age group and social media preference independent? Show your work using appropriate probability calculations.\n",
-        "\n",
-        "**d)** Which age group shows the strongest preference for Twitter (as a percentage within that age group)?\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## Question 5\n",
-        "A medical test for a rare disease has the following characteristics:\n",
-        "- The disease affects 0.2% of the population\n",
-        "- If a person has the disease, the test is positive 95% of the time (sensitivity)\n",
-        "- If a person doesn't have the disease, the test is negative 98% of the time (specificity)\n",
-        "\n",
-        "**a)** Create a tree diagram showing all possible outcomes.\n",
-        "\n",
-        "**b)** What is the probability that a randomly selected person tests positive?\n",
-        "\n",
-        "**c)** If a person tests positive, what is the probability they actually have the disease?\n",
-        "\n",
-        "**d)** Explain why this result might be surprising and discuss its implications for medical screening.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## Question 6\n",
-        "In a group of 100 people surveyed about their streaming subscriptions:\n",
-        "- 55 have Netflix (N)\n",
-        "- 45 have Disney+ (D)\n",
-        "- 35 have Amazon Prime (A)\n",
-        "- 20 have both Netflix and Disney+\n",
-        "- 15 have both Netflix and Amazon Prime\n",
-        "- 12 have both Disney+ and Amazon Prime\n",
-        "- 8 have all three services\n",
-        "\n",
-        "**a)** Draw a Venn diagram with three overlapping circles to represent this data.\n",
-        "\n",
-        "**b)** How many people have exactly two streaming services?\n",
-        "\n",
-        "**c)** What is the probability that a randomly selected person has Netflix but not Disney+?\n",
-        "\n",
-        "**d)** How many people have none of these three services?\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## Question 7: Tree Diagrams with Weather and Events\n",
-        "The probability of rain on any given day is 0.3. Sarah checks the weather forecast, which has the following accuracy:\n",
-        "- If it will rain, the forecast predicts rain 85% of the time\n",
-        "- If it won't rain, the forecast predicts no rain 90% of the time\n",
-        "\n",
-        "**a)** Draw a tree diagram showing all possible outcomes.\n",
-        "\n",
-        "**b)** What is the probability that the forecast predicts rain?\n",
-        "\n",
-        "**c)** Given that the forecast predicts rain, what is the probability that it will actually rain?\n",
-        "\n",
-        "**d)** On how many days out of 100 would you expect the forecast to be wrong?\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## Question 8\n",
-        "A survey of 300 high school students asked about their favorite subject and grade level:\n",
-        "\n",
-        "|           | Math | Science | English | History | Total |\n",
-        "|-----------|------|---------|---------|---------|-------|\n",
-        "| Grade 9   | 25   | 30      | 20      | 15      | 90    |\n",
-        "| Grade 10  | 20   | 25      | 25      | 20      | 90    |\n",
-        "| Grade 11  | 15   | 20      | 30      | 25      | 90    |\n",
-        "| Grade 12  | 10   | 15      | 20      | 25      | 30    |\n",
-        "| **Total** | 70   | 90      | 95      | 85      | 300   |\n",
-        "\n",
-        "**a)** What is the probability that a randomly selected student is in Grade 12?\n",
-        "\n",
-        "**b)** What is the probability that a student prefers Science, given they are in Grade 9?\n",
-        "\n",
-        "**c)** Are grade level and subject preference independent? Test using Grade 10 and Math preference.\n",
-        "\n",
-        "**d)** Which grade shows the most balanced preference across all subjects?\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## Question 9\n",
-        "In a basketball league, Team A wins 70% of their home games and 45% of their away games. This season, 60% of their games are played at home.\n",
-        "\n",
-        "**a)** Create a tree diagram for this situation.\n",
-        "\n",
-        "**b)** What is the probability that Team A wins a randomly selected game?\n",
-        "\n",
-        "**c)** Given that Team A won a game, what is the probability it was played at home?\n",
-        "\n",
-        "**d)** If Team A plays 50 games this season, how many home wins would you expect?\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## Question 10: Bonus\n",
-        "A screening test for a condition has these characteristics:\n",
-        "- 3% of the population has the condition\n",
-        "- Test sensitivity (correct positive rate): 92%\n",
-        "- Test specificity (correct negative rate): 95%\n",
-        "\n",
-        "**a)** Construct a tree diagram for this screening scenario.\n",
-        "\n",
-        "**b)** What percentage of people will test positive?\n",
-        "\n",
-        "**c)** Of those who test positive, what percentage actually have the condition?\n",
-        "\n",
-        "**d)** Create a contingency table showing the relationship between actual condition status and test results for a population of 10,000 people.\n"
+        "np.random.seed(42)\n",
+        "random.seed(42)\n",
+        "#seaborn_colors = sns.color_palette(\"colorblind\")"
       ],
       "metadata": {
-        "id": "cDq4CtmmMpZl"
+        "id": "TRFRlWqs4HML"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Probability\n",
+        "\n",
+        "An Emprical distribution is a probability distribution we obtaian from looking at multiple observation of a in event.\n",
+        "\n",
+        "**Example** : In this example we look at rolling a die"
+      ],
+      "metadata": {
+        "id": "t3Rmo9ab3rw9"
       }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "QZt9PExk3pQn"
+      },
+      "outputs": [],
+      "source": [
+        "# simulate die roll\n",
+        "random.randint(1, 6)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- to simulate a repeated experiment we repeatedly run this fuction in a loop"
+      ],
+      "metadata": {
+        "id": "KGxILAFE4vEq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "die_rolls = [random.randint(1, 6) for _ in range(10)]\n",
+        "die_rolls"
+      ],
+      "metadata": {
+        "id": "OsX5fSXv4mOq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- this is still a small amount of iterations so we scale it up a little"
+      ],
+      "metadata": {
+        "id": "yOARVL7o5dTG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "die_rolls = [random.randint(1, 6) for _ in range(60)]"
+      ],
+      "metadata": {
+        "id": "Y4cP4mP05cNj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- We now need to obtain the counts for each of our outcomes"
+      ],
+      "metadata": {
+        "id": "noin28UG515e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "die_counts = pd.Series(die_rolls).value_counts()\n",
+        "die_counts"
+      ],
+      "metadata": {
+        "id": "xsXtRsnO52Dm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- To make it more visually interesting we can put it in a bargraph"
+      ],
+      "metadata": {
+        "id": "ysJiRh0k6iDT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(6, 4))\n",
+        "sns.barplot(x=die_counts.index, y=die_counts.values)\n",
+        "plt.title('Die Roll Results (60 Rolls)')\n",
+        "plt.xlabel('Outcome')\n",
+        "plt.ylabel('Frequency')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "pGdoL1v46zeJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- This result does not align with the initution we have for this experiment. So we scale up to see how this develops"
+      ],
+      "metadata": {
+        "id": "wRBE2FxA7QL3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 6000 times\n",
+        "die_rolls = [random.randint(1, 6) for _ in range(6000)]\n",
+        "die_counts = pd.Series(die_rolls).value_counts()\n",
+        "plt.figure(figsize=(6, 4))\n",
+        "sns.barplot(x=die_counts.index, y=die_counts.values)\n",
+        "plt.title('Die Roll Results (6000 Rolls)')\n",
+        "plt.xlabel('Outcome')\n",
+        "plt.ylabel('Frequency')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "C3dN1WPp7OuG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 6000000 times\n",
+        "die_rolls = [random.randint(1, 6) for _ in range(6000000)]\n",
+        "die_counts = pd.Series(die_rolls).value_counts()\n",
+        "plt.figure(figsize=(6, 4))\n",
+        "sns.barplot(x=die_counts.index, y=die_counts.values)\n",
+        "plt.title('Die Roll Results (6000000 Rolls)')\n",
+        "plt.xlabel('Outcome')\n",
+        "plt.ylabel('Frequency')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "lQfaVYJN7-6n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Example**: We can perform a similar experiment with toss a coin"
+      ],
+      "metadata": {
+        "id": "bRIwRfe68BkV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sample_sizes=  [10,100,1000,100000]\n",
+        "sample_space= ['Heads','Tails']\n",
+        "\n",
+        "fig, axes = plt.subplots(2, 2, figsize=(12, 10))\n",
+        "axes = axes.ravel()\n",
+        "\n",
+        "for n in sample_sizes:\n",
+        "    coin_flips=[random.choice(sample_space) for _ in range(n)]\n",
+        "    axes[sample_sizes.index(n)].bar(['Heads','Tails'],[coin_flips.count('Heads'),coin_flips.count('Tails')])\n",
+        "    axes[sample_sizes.index(n)].set_title(f'Sample Size = {n}')\n",
+        "    axes[sample_sizes.index(n)].set_xlabel('Outcome')\n",
+        "    axes[sample_sizes.index(n)].set_ylabel('Frequency')\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "y4vF_B7e8wHN"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
