--- a/Normal_Distrbution.ipynb
+++ b/Normal_Distrbution.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKpsVSJexbdRAsK4NCbjwp",
+      "authorship_tag": "ABX9TyM6OrScsvUbKi3JRoCAhpTX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "from scipy.stats import norm\n",
+        "from scipy.stats import norm,shapiro\n",
         "from sklearn.datasets import load_iris, load_diabetes\n",
         "import pandas as pd"
       ]
@@ -69,6 +69,7 @@
       "cell_type": "code",
       "source": [
         "# Find z\n",
+        "\n",
         "print(norm.ppf(0.9750))"
       ],
       "metadata": {
@@ -81,6 +82,7 @@
       "cell_type": "code",
       "source": [
         "# Find P(X<x)\n",
+        "\n",
         "print(norm.cdf(6,loc=6,scale=2))"
       ],
       "metadata": {
@@ -244,7 +246,7 @@
         "# Overlay normal distribution\n",
         "mu, sigma = np.mean(sepal_length), np.std(sepal_length)\n",
         "x = np.linspace(sepal_length.min(), sepal_length.max(), 100)\n",
-        "plt.plot(x, stats.norm.pdf(x, mu, sigma), 'r-', label=f'Normal(μ={mu:.2f}, σ={sigma:.2f})')\n",
+        "plt.plot(x,norm.pdf(x, mu, sigma), 'r-', label=f'Normal(μ={mu:.2f}, σ={sigma:.2f})')\n",
         "plt.legend()\n",
         "plt.show()"
       ],
@@ -267,7 +269,7 @@
       "cell_type": "code",
       "source": [
         "#shapiro wilks\n",
-        "res=stats.shapiro(sepal_length)\n",
+        "res=shapiro(sepal_length)\n",
         "print(\"p-value = \",res[1])"
       ],
       "metadata": {
