--- a/Regression_Analysis.ipynb
+++ b/Regression_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrWkNi/4fCt61R0ZNQ6NvE",
+      "authorship_tag": "ABX9TyMU+QjYmA0xywk7DJYFVa/3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,51 @@
         "```\n",
         "\n",
         "### Regression Equation\n",
-        "**ŷ = 62.25 + 2.083x**\n",
+        "**ŷ = 62.25 + 2.083x**"
+      ],
+      "metadata": {
+        "id": "3qvK32m3d2f_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "data = {\n",
+        "    'Study_Hours': [2, 4, 6, 8, 10, 12, 14, 16],\n",
+        "    'Exam_Score': [65, 70, 75, 80, 85, 90, 88, 95]\n",
+        "}\n",
+        "df = pd.DataFrame(data)\n",
+        "X = df[['Study_Hours']]  # Features (must be 2D for sklearn)\n",
+        "y = df['Exam_Score']     # Target variable\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "plt.scatter(X, y, color='blue', alpha=0.7)\n",
+        "plt.xlabel('Study Hours')\n",
+        "plt.ylabel('Exam Score')\n",
+        "plt.title('Scatter Plot of Study Hours vs Exam Score')\n",
+        "model = LinearRegression()\n",
+        "model.fit(X, y)\n",
+        "y_pred = model.predict(X)\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "plt.scatter(X, y, color='blue', alpha=0.7)\n",
+        "plt.plot(X, y_pred, color='red', linewidth=2)\n",
+        "plt.xlabel('Study Hours')\n",
+        "plt.ylabel('Exam Score')\n",
+        "plt.title('Regression Line')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "u81r8bdzdz5p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
         "\n",
         "## Step 3: Sum of Squares Calculations\n",
         "\n",
