--- a/Regression_Analysis.ipynb
+++ b/Regression_Analysis.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMU+QjYmA0xywk7DJYFVa/3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Complete Simple Linear Regression Analysis Notebook\n",
+        "# Simple Linear Regression Analysis\n",
         "\n",
         "## Dataset (8 Observations)\n",
         "Let's analyze the relationship between study hours (X) and exam scores (Y):\n",
